[tool.poetry]
name = "kiwi"
version = "0.1.0"
description = "backend service for birdeye"
authors = ["RGB <diab.hedy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
quart = "^0.19.8"
cerberus = "^1.3.5"
itsdangerous = "^2.2.0"
bcrypt = "^4.2.0"
hypercorn = "^0.17.3"
winter = {git = "https://gitlab.com/elixire/winter"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
